--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ python:
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
-script: python organdonor.py https://www.youtube.com/watch?v=iiC108zDkB4
+script: python organdonor.py https://www.youtube.com/watch?v=iiC108zDkB4 -d
